@@ -7,6 +7,7 @@
 		
 		<!-- environment options -->
 		<option name='rompath' value=''/>
+		<option name='hashpath' value=''/>
 		<option name='osdprocessors' value='1'/>
 
 		<!-- processing options -->
